table created from book titles

--- a/week-07/day-3/bookstore/index.html
+++ b/week-07/day-3/bookstore/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Books</title>
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-  
 </head>
+
 <body>
+  <table>
+    <th>Titles</th>
+    <tr>
+      <td></td>
+    </tr>
+  </table>
+  <div class="container">
+
+  </div>
   <script src="script.js"></script>
 </body>
+
 </html>
