(fix)dollar signs displayed with pseudo elements

--- a/week-08/day-3/fancy_table/index.html
+++ b/week-08/day-3/fancy_table/index.html
@@ -17,23 +17,23 @@
       </tr>
       <tr class="blue">
         <td>January</td>
-        <td>$ 50,000.00</td>
+        <td class="data-cuurency">50,000.00</td>
       </tr>
       <tr class="white">
         <td>February</td>
-        <td>$ 10,000.00</td>
+        <td class="data-cuurency">10,000.00</td>
       </tr>
       <tr class="blue">
         <td>March</td>
-        <td>$ 85,000.00</td>
+        <td class="data-cuurency">85,000.00</td>
       </tr>
       <tr class="white">
         <td>April</td>
-        <td>$ 56,000.00</td>
+        <td class="data-cuurency">56,000.00</td>
       </tr>
       <tr class="blue">
         <td>May</td>
-        <td>$ 98,000.00</td>
+        <td class="data-cuurency">98,000.00</td>
       </tr>
     </table>
 
