--- a/week-08/day-3/labelled_buttons/index.html
+++ b/week-08/day-3/labelled_buttons/index.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body class="btn-container">
-  <div class="delete"><div class="icon"><i class="far fa-trash-alt"></i></div><span class="text">delete</span></div>
-  <script src="script.js"></script>
+  <div class="delete"><div class="icon"><i class="far fa-trash-alt"></i></div><span class="text">Delete</span></div>
 </div>
 </body>
 </html>
