images thumbnails added

--- a/week-06/day-5/image_gallery/index.html
+++ b/week-06/day-5/image_gallery/index.html
@@ -24,7 +24,9 @@
       <p class="img-description"></p>
     </div>
     <div class="arrow arrow-right"><i class="icofont-arrow-right"></i></div>
+    <div class="thumbnails">
 
+    </div>
   </div>
 
   <script src="script.js"></script>
