login form task finished

--- a/week-08/day-4/index.html
+++ b/week-08/day-4/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8"/>
   <title>Login</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,600" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
 </head>
 
@@ -13,9 +14,9 @@
     <form action="POST">
       <p class="title">ACCOUNT LOGIN</p>
       <label for="username">username</label>
-      <input class='focused' type="text" name="username">
+      <input class='focused' type="text" name="username" required>
       <label for="password">password</label>
-      <input type="password" name="password">
+      <input type="password" name="password" placeholder='                                                                                     👁️' required>
       <p class="forgot">Forgot password?</p>
       <button>Login</button>
     </form>
