button disable task finished

--- a/week-08/day-4/button_disable/index.html
+++ b/week-08/day-4/button_disable/index.html
@@ -9,19 +9,18 @@
 <body>
 <form action="POST">
   <label for="">What is your favourite pet?</label> </br>
- <input type="radio" name='petselector' value='cat'>Cat</br>
- <input type="radio" name='petselector' value='dog'>Dog</br>
- <input type="radio" name='petselector' value='Goldfish'>Goldfish</br>
-
+ <input class="cat-radio" type="radio" name='petselector' value='cat'>Cat</br>
+ <input class='dog-radio' type="radio" name='petselector' value='dog'>Dog</br>
+ <input class='goldfish-radio' type="radio" name='petselector' value='Goldfish'>Goldfish</br>
 
  <label for="">Do you want to sign up to cat facts?</label> </br>
- <input type="radio" name='yesno' value='yes'>yes</br>
- <input type="radio" name='yesno' value='no'>no</br>
- <button disabled>I love cats</button>
- <button disabled>Sign up</button>
+ <input class = 'cat-yes' type="radio" name='yesno' value='yes'>yes</br>
+ <input class = 'cat-no' type="radio" name='yesno' value='no'>no</br>
+ <button class="i-love-cats">I love cats</button>
+ <button class='sign-up'>Sign up</button>
 </form>
 
-<script src="sricpt.js"></script>
+<script src="script.js"></script>
 </body>
 
 </html>
