(feat) fiealds are reqired in html form

--- a/week-08/day-4/newsletter/index.html
+++ b/week-08/day-4/newsletter/index.html
@@ -6,10 +6,10 @@
 <body>
   <form action="POST">
     <label for="name">name</label>
-    <input type="text" name="name">
+    <input type="text" name="name" required>
 
     <label for="email">email</label>
-    <input type="text" name="email">
+    <input type="text" name="email" required>
   </form>
 </body>
 </html>
