--- a/week-08/day-4/newsletter/index.html
+++ b/week-08/day-4/newsletter/index.html
@@ -4,7 +4,7 @@
   <title>Newsletter</title>
 </head>
 <body>
-  <form action="POST">
+  <form action="POST" method="POST">
     <label for="name">name</label>
     <input type="text" name="name" required>
 
