--- a/week-08/day-4/newsletter/index.html
+++ b/week-08/day-4/newsletter/index.html
@@ -4,12 +4,13 @@
   <title>Newsletter</title>
 </head>
 <body>
-  <form action="POST" method="POST">
+  <form action="http://localhost:3000/singup" method="POST">
     <label for="name">name</label>
     <input type="text" name="name" required>
 
     <label for="email">email</label>
-    <input type="text" name="email" required>
+    <input type="email" name="email" required>
+  <button type="submit">submit</button>
   </form>
 </body>
 </html>
