(err)cannot display post in html

--- a/week-08/day-4/newsletter/index.html
+++ b/week-08/day-4/newsletter/index.html
@@ -4,7 +4,7 @@
   <title>Newsletter</title>
 </head>
 <body>
-  <form action="http://localhost:3000/singup" method="POST">
+  <form action="http://localhost:3000/singup" method="POST" enctype="application/json">
     <label for="name">name</label>
     <input type="text" name="name" required>
 
@@ -12,5 +12,7 @@
     <input type="email" name="email" required>
   <button type="submit">submit</button>
   </form>
+
+<script src="index.js"></script>  
 </body>
 </html>
