(feat) html layout created for new post

--- a/reddit_clone/index.html
+++ b/reddit_clone/index.html
@@ -31,7 +31,7 @@
           <li>Goat breeding</li>
         </ul>
       </div>
-      <button class="btn btn-new-post">Create a new post</button>
+      <a class="btn btn-new-post" href='./new_post.html'>Create a new post</a>
     </div>
   </div>
 
