--- a/week-07/day-2/get_position/index.html
+++ b/week-07/day-2/get_position/index.html
@@ -3,9 +3,14 @@
 <head>
   <title>Get Position</title>
  <!---<link rel="stylesheet" type="text/css" media="screen" href="style.css" />-->
-  <script src="index.js"></script>
+
 </head>
 <body>
-  
+  <form>
+    <label for="input">What is your city?</label>
+    <input class='get-city-name' type="text">
+    <button>Get coordinates</button>
+  </form>
+  <script src="index.js"></script>
 </body>
 </html>
