--- a/week-07/day-2/get_position/index.html
+++ b/week-07/day-2/get_position/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Get Position</title>
- <!---<link rel="stylesheet" type="text/css" media="screen" href="style.css" />-->
+<link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 
 </head>
 <body>
@@ -11,6 +11,11 @@
     <input class='get-city-name' type="text">
     <button>Get coordinates</button>
   </form>
+
+  <div class="info-container">
+
+  </div>
+
   <script src="index.js"></script>
 </body>
 </html>
