--- a/week-07/day-2/get_position/index.html
+++ b/week-07/day-2/get_position/index.html
@@ -15,6 +15,10 @@
   <div class="info-container">
 
   </div>
+  
+  <iframe width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  
 
   <script src="index.js"></script>
 </body>
