(fix)html structure created

--- a/week-09/day-2/promise_it_wont_hurt/index.html
+++ b/week-09/day-2/promise_it_wont_hurt/index.html
@@ -1,3 +1,15 @@
-<div class="joke-container">
-  <button class="btn-joke">Joke</button>
-</div>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Random Joke</title>
+  <script src="index.js"></script>
+</head>
+
+<body>
+  <div class="joke-container">
+    <button class="btn-joke">Joke</button>
+  </div>
+</body>
+
+</html>
