(feat) /game endpoint can be fetched in index.js

--- a/week-09/day-4/quiz_application/assets/index.html
+++ b/week-09/day-4/quiz_application/assets/index.html
@@ -5,7 +5,20 @@
   <link rel="stylesheet" type="text/css" media="screen" href="../public/css/index.css" />
 </head>
 <body>
-  <h1>WORKS</h1>
+  <div class="main-container">
+    <div class="game-container">
+       <div class="score-container">Score:</div>
+        <div class="question-container">
+          <p class="question"></p>
+        </div>
+    </div>
+  </div>
+  
+
+
+
+
+
   <script src="../public/javascript/index.js"></script>
 </body>
 </html>
