--- a/week-09/day-4/quiz_application/assets/index.html
+++ b/week-09/day-4/quiz_application/assets/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Page Title</title>
+  <title>Quiz</title>
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" media="screen" href="../public/css/index.css" />
 </head>
 <body>
   <div class="main-container">
     <div class="game-container">
-       <div class="score-container">Score:</div>
+       <div class="score-container">
+         <h3>Score: <span class="score"></span></h3> 
+       </div>
         <div class="question-container">
-          <p class="question"></p>
+          <h2 class="question"></h2>
+        </div>
+        <div class="answer-container">
+
         </div>
     </div>
   </div>
