(feat) questions can be deleted from database

--- a/week-09/day-4/quiz_application/assets/index.html
+++ b/week-09/day-4/quiz_application/assets/index.html
@@ -19,7 +19,7 @@
       <div class="answer-container">
 
       </div>
-      <a class='manage-questions' href="#">manage questions</a>
+      <a class='manage-questions' href="http://localhost:8080/managequestions">manage questions</a>
     </div>
   </div>
 
